examples/experimental/routability/gateways.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: public-gateway
spec:
  gatewayClassName: acme-lb
  infrastructure:
    routability: Public
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: private-gateway
spec:
  gatewayClassName: acme-lb
  infrastructure:
    routability: Private
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cluster-local-gateway
spec:
  gatewayClassName: acme-lb
  infrastructure:
    routability: Cluster
  listeners:
  - name: http
    protocol: HTTP
    port: 80
